# task-manager

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/app/: container.py  main.py
src/app/models/: tasks.py  users.py
src/app/routers/: tasks.py  users.py
src/interfaces/: repository.py
src/usecases/: models.py  task_service.py  user_service.py
tests/: conftest.py
tests/app/: conftest.py  test_tasks_routers.py  test_users_routers.py
tests/extrenal/: test_postgres_repository.py
tests/usecases/: test_task_service.py  test_user_service.py
