[project]
name = "task-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "nataliaklochko",email = "klochko.n.m@yandex.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.10"
pytest-asyncio = "^1.1.0"
mypy = "^1.17.1"
aiosqlite = "^0.21.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
